dist/LineScript-win64-20260616/tests/cases/compile_fail/game_draw_gfx_bad_types.lsc
main() -> i64 do
  declare g = game_new(8, 8, "g", false)
  game_draw_gfx(g, "sprite", 0, 0)
  return 0
end
